--- a/static/lau/lau.css
+++ b/static/lau/lau.css
@@ -21,10 +21,10 @@ a, *[lau-href], *[lau-event] {
     font-weight: bold;
 }
 .layui-header .layui-logo {
-    left: 50px;
+    left: 0px;
     line-height: 50px;
-    width: 130px;
-    border-right: 1px solid #2a2f32;
+    width: 180px;
+   /* border-right: 1px solid #2a2f32;*/
     font-weight: bold;
 }
 .layui-header .layui-layout-left {
@@ -53,7 +53,7 @@ a, *[lau-href], *[lau-event] {
 .layui-layout-admin .layui-side {
     top: 50px;
     width: 180px;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     border-right: 1px solid #2a2f32;
     background-color: #373D41;
     -webkit-transition: width 0.2s;
